# defiguard

./: CITATION.cff  Dockerfile  README.md  pyproject.toml  requirements.txt
artifacts/: artifact.md  replay_interface.md
configs/: default.yaml
data/DeFiIncidents-CC/: incidents.csv
data/DeFiSynth-Proto/: injected_bugs.csv  protocols.csv
data/DeFiZero/: incidents.csv
results/_tmp_test_paper/: SUMMARY.md  table2_incident_corpus.csv  table5_etd_atomic_vs_multiblock.csv  table6_defizero.csv
results/figures/: fig6_runtime_components.csv
results/paper/: table4_overall_performance.csv  table7_overhead.csv
results/raw_logs/: metrics.jsonl  runtime_tokens.jsonl  synth_variants.jsonl
results/tables/: table2_overall_performance.csv  table3_common_subset.csv  table4_closest_baselines.csv  table5_atomic_vs_multiblock.csv  table6_heldout_defizero.csv  table7_overhead.csv  table8_ablation.csv
scripts/: check_artifact.sh  reproduce_all.sh
src/defiguard/: __init__.py  cli.py  eval.py  metrics.py  toy_run.py  utils.py
src/defiguard/scripts/: build_common_subset.py  export_tables.py  make_paper_tables_figs.py  validate_outputs.py
src/defiguard/toy/: __init__.py  agents.py  protocol.py  run.py  search.py
tests/: test_smoke.py
